# dlm

./: Cargo.toml  PRD.md  README.md  RELEASING.md  build.rs  install.ps1  install.sh  specs.md  uninstall.sh
.github/workflows/: _wincuda-diagnose.yml  ci.yml  gpu.yml  release.yml
src/: batching.rs  cli.rs  error.rs  generate.rs  hub.rs  lib.rs  loader.rs  main.rs  speculative.rs  tokenizer.rs
src/activation/: mod.rs  pool.rs
src/cache/: mod.rs  paged.rs  ram.rs
src/cuda/: ffi.rs
src/distributed/: coordinator.rs  mod.rs  protocol.rs  worker.rs
src/forward/: cpu.rs  gpu.rs  kernel.rs  mod.rs  multigpu.rs  orchestrator.rs  streaming.rs  streaming_gpu.rs
src/gpu/: device.rs  ffi_cuda.rs  ffi_hip.rs  kernels.cu  mod.rs
src/memory/: page.rs  pinned.rs
src/model/: config.rs  mod.rs  naming.rs
src/pipeline/: buffer.rs  mod.rs  schedule.rs  source.rs
src/profiler/: vram.rs
src/quant/: dequant.rs  mod.rs  packed.rs
src/server/: distributed.rs  engine.rs  http.rs  mod.rs  openai.rs
src/storage/: catalog.rs  mmap_store.rs  mod.rs  safetensors.rs
src/swap/: mod.rs
tests/: batching.rs  distributed.rs  gpu_parity.rs  mla.rs  moe.rs  multigpu.rs  phase1.rs  real_model.rs  server.rs  server_distributed.rs  server_hardening.rs  server_sampling.rs  server_stream.rs  speculative.rs  streaming.rs
