[package]
name = "flip"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "flip — dynamic layer-streaming inference engine for running massive LLMs on consumer GPUs"
license = "Apache-2.0"

[lib]
name = "flip"
path = "src/lib.rs"

[[bin]]
name = "flip"
path = "src/main.rs"

[features]
default = []
# NVIDIA backend: real CUDA runtime FFI (cudaMemGetInfo / cudaHostAlloc page-locked
# pinning). Requires the CUDA toolkit + `cudart` on the link path.
cuda = []
# AMD backend: ROCm/HIP runtime FFI (hipMemGetInfo / hipHostMalloc). Requires ROCm
# + `amdhip64` on the link path. Mutually exclusive with `cuda`.
# Without either feature, the crate builds and runs with a page-aligned host-memory
# fallback so the engine is fully testable off-GPU on any machine.
rocm = []
# GPU compute kernels: compiles src/gpu/kernels.cu with nvcc and enables GpuKernel
# (the device `run_block`). Implies `cuda`; requires the CUDA toolkit (nvcc) at
# build time. `cargo check` type-checks the Rust FFI without nvcc.
cuda-kernels = ["cuda"]

[dependencies]
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
# pinned to 0.14.1: the last release whose MSRV matches this crate's rust-version (1.75).
prost = "=0.14.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

# Release binaries (shipped by the install script): stripped + thin-LTO for a
# small download and a faster inference loop.
[profile.release]
strip = true
lto = "thin"
